# PDF-Toolkit

./: .gitignore  404.html  README.md  gui.py  index.html  main.py  mkdocs.yml  pdf_toolkit.py  pdf_tools.py  pyproject.toml  sitemap.xml  tools.py  tui.py  utils.py
.github/workflows/: deploy.yaml  publish.yaml  test.yaml
docs/: getting-started.md  index.md
getting-started/: index.html
pdf-toolkit/: main.py  utils.py
pdf_toolkit/: main.py
pdfwerks/: arg_parse.py  cli_interface.py  file_dialogs.py  main.py  pdf_tools.py  tui.py  tui_interface.py  utils.py
pdfwerks/cli/: arg_parse.py  cli.py
pdfwerks/core/: pdf_tools.py  utils.py
pdfwerks/tui/: tui.py
pdfwerks/tui/components/: confirmation_menu.py  progress_bar.py  reorder_menu.py  selection_menu.py
search/: search_index.json
tests/: test_convert.py  test_export.py  test_utils.py
